<resources>
    <string name="app_name">CopenhagenBuzz</string>
    <string name="event_name">Event name</string>
    <string name="event_location">Event location</string>
    <string name="event_date">Event date</string>
    <string name="event_type">Event type</string>
    <string name="event_description">Event description</string>
    <string name="add">Add</string>
    <string name="login">Login</string>
    <string name="guest">Guest</string>
    <string name="logout">Logout</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="timeline">Timeline</string>
    <string name="favorites">Favorites</string>
    <string name="maps">Maps</string>
    <string name="calendar">Calendar</string>
    <string name="media">media</string>
</resources>